修改图片路径到主机下

--- a/docs/01.网络/02.用户数据报协议UDP.md
+++ b/docs/01.网络/02.用户数据报协议UDP.md
@@ -10,7 +10,7 @@
 2. UDP 使用`尽最大努力交付`，即不保证可靠交付，主机不需要维持复杂的连接状态表
 3. UDP 是`面向报文`的，发送方的 UDP 对应用程序交下来的报文，在添加首部后就向下交付 IP 层。UDP 对应用层交下来的报文，既不合并，也不拆分，而是`保留这些报文的边界`
 
-![UDP协议-图1](./assets/network-udp-01.png)
+![UDP协议-图1](https://gfblog.cn/images/github/gfphp/network-udp-01.png)
 
 4. UDP `没有拥塞控制`，网络出现的拥塞不会使源主机的发送速率降低。这对某些实时应用是很重要的
 5. UDP 支持一对一、一对多、多对一和多对多的交互通信
@@ -32,13 +32,13 @@
 - `长度` UDP 用户数据报的长度，其最小值是8(仅有首部)
 - `检验和` 检测 UDP 用户数据报在传输中是否有错。有错就丢弃
 
-![UDP协议-图2](./assets/network-udp-02.png)
+![UDP协议-图2](https://gfblog.cn/images/github/gfphp/network-udp-02.png)
 
 ### 端口分用
 
 当运输层从 IP 层收到 UDP 数据报时，就根据首部中的目的端口，把 UDP 数据报通过相应的端口，上交最后的终点——应用进程
 
-![UDP协议-图3](./assets/network-udp-03.png)
+![UDP协议-图3](https://gfblog.cn/images/github/gfphp/network-udp-03.png)
 
 如果接受方 UDP 发现收到的报文中的目的端口号不正确(即不存在对应于该端口号的应用程序)，就丢弃该报文，并由网际控制报文协议 ICMP 发送“端口不可达”差错报文给发送方
 
