--- a/docs/02.数据结构与算法/02.数据结构实现基础.md
+++ b/docs/02.数据结构与算法/02.数据结构实现基础.md
@@ -68,7 +68,7 @@ struct 结构名 {
 
 #### 单向链表的结构
 
-![单向链表的组成示意图](./assets/DSA-single-link.png)
+![单向链表的组成示意图](https://gfblog.cn/images/github/gfphp/DSA-single-link.png)
 
 ```php
 //单向链表结点
@@ -129,7 +129,7 @@ class singleLinkList
 
 ### 双向链表
 
-![双向链表](./assets/DSA-double-link.png)
+![双向链表](https://gfblog.cn/images/github/gfphp/DSA-double-link.png)
 
 在单向链表基础上增加指向前驱单元指针的链表叫做`双向链表`。结点增加指向其前驱结点的指针，将牺牲一部分空间代价，前驱单元查找可以不必从链头开始查找
 
@@ -157,7 +157,7 @@ class node
 
 ### 双向循环链表
 
-![双向循环链表](./assets/DSA-double-link2.png)
+![双向循环链表](https://gfblog.cn/images/github/gfphp/DSA-double-link2.png)
 
 将双向链表最后一个单元的 Next 指针指向链表的第一个单元，而第一个单元的 Previous 指针指向链表的最后一个单元，这样构成的链表称为`双向循环链表`
 
