--- a/docs/02.数据结构与算法/03.线性结构.md
+++ b/docs/02.数据结构与算法/03.线性结构.md
@@ -22,7 +22,7 @@
 
 线性表的顺序存储是指在内存中用地址连续的一块存储空间顺序存放线性表的各元素。考虑到线性表的运算有插入、删除等，即表的长度是动态可变的，因此，数组的容量需要设计得足够大。
 
-![线性表的顺序存储](./assets/DSA-线性表的顺序存储示意.png)
+![线性表的顺序存储](https://gfblog.cn/images/github/gfphp/DSA-线性表的顺序存储示意.png)
 
 > MAXSIZE：根据实际问题定义的足够大的整数
 
@@ -50,7 +50,7 @@
 
 使用链表结构可以克服数组表示线性表的缺陷。下图为单向链表的图示表示形式，它有 n 个数据单元，每个数据单元由数据域和链接域两部分组成。数据域用来存放数值，链接域是线性表数据单元的结构指针。
 
-![线性表的链表表示](./assets/DSA-线性表的链表表示.png)
+![线性表的链表表示](https://gfblog.cn/images/github/gfphp/DSA-线性表的链表表示.png)
 
 ```php
 //结点的结构定义
@@ -99,7 +99,7 @@ class node
 
 `堆栈`(Stack)是具有一定约束的线性表，插入和删除操作都作用在一个称为栈顶(Top)的端点位置。
 
-![堆栈](./assets/DSA-stack.png)
+![堆栈](https://gfblog.cn/images/github/gfphp/DSA-stack.png)
 
 ### 表达式求值
 
