--- a/docs/04.Web/03.CSS-Sprite的应用.md
+++ b/docs/04.Web/03.CSS-Sprite的应用.md
@@ -23,7 +23,7 @@
 
 ## background-position属性
 
-![CSS sprite 1](./assets/web-css-雪碧图1.jpg)
+![CSS sprite 1](https://gfblog.cn/images/github/gfphp/web-css-雪碧图1.jpg)
 
 > 根据图所知：
 
@@ -39,7 +39,7 @@
 
 > 其实最好的拼图就是每个图标边距是多少和图标周围的留白留多少都控制好，对css的background-position的坐标写起来有规律的话，好些很多（然而这个是我自己手动拖拉的，位置很没有规律，所以下面的坐标值都是调试过才取值的）
 
-![CSS sprite 2](./assets/web-css-雪碧图2.png)
+![CSS sprite 2](https://gfblog.cn/images/github/gfphp/web-css-雪碧图2.png)
 
 > 讲完这些了，可以来正题了，html和css代码了，下面代码是模仿生成一个菜单~~~
 
@@ -167,6 +167,6 @@ li i{
 
 ## 效果图如下
 
-![CSS sprite 3](./assets/web-css-雪碧图3.jpg)
+![CSS sprite 3](https://gfblog.cn/images/github/gfphp/web-css-雪碧图3.jpg)
 
 **本文转载自 忆桐之家的博客，<a href="http://hongyitong.github.io/2016/12/23/雪碧图CSS%20Sprite的应用/" rel="nofollow">《雪碧图CSS Sprite的应用》</a>**
