--- a/docs/04.Web/08.CSS-Position学习.md
+++ b/docs/04.Web/08.CSS-Position学习.md
@@ -28,11 +28,11 @@ relative偏移相对的是margin的左上侧。
 
 例如对sub1设置relative属性后，会根据top，right，bottom，left属性偏移，而sub2的位置不变（sub1会占住原来的位置）
 
-![css position 图1](./assets/web-css-position-01.png)
+![css position 图1](https://gfblog.cn/images/github/gfphp/web-css-position-01.png)
 
 再对sub2设置relative属性，它也会相对其原来的位置偏移（sub2位置还会被占着）
 
-![css position 图2](./assets/web-css-position-02.png)
+![css position 图2](https://gfblog.cn/images/github/gfphp/web-css-position-02.png)
 
 ## absolute（绝对定位）
 
@@ -44,11 +44,11 @@ relative偏移相对的是margin的左上侧。
 
 这时由于sub1的位置“腾出来了”，sub2就会跑到sub1的位置（也可以理解sub1浮起来了，dreamweaver中叫做层），它的文档流就会基于parent。
 
-![css position 图3](./assets/web-css-position-03.png)
+![css position 图3](https://gfblog.cn/images/github/gfphp/web-css-position-03.png)
 
 如果再对sub2设置absolute，那其也是相对parent的。
 
-![css position 图4](./assets/web-css-position-04.png)
+![css position 图4](https://gfblog.cn/images/github/gfphp/web-css-position-04.png)
 
 ## fixed
 
