--- a/docs/04.Web/09.JavaScript的性能优化-加载和执行.md
+++ b/docs/04.Web/09.JavaScript的性能优化-加载和执行.md
@@ -45,7 +45,7 @@ HTML 4 规范指出`<script>`标签可以放在 HTML 文档的`<head>`或`<body>
 然而这种常规的做法却隐藏着严重的性能问题。在清单 2 的示例中，当浏览器解析到 `<script>` 标签（第 4 行）时，浏览器会停止解析其后的内容，而优先下载脚本文件，并执行其中的代码，这意味着，其后的 styles.css 样式文件和`<body>`标签都无法被加载，由于`<body>`标签无法被加载，那么页面自然就无法渲染了。因此在该 JavaScript 代码完全执行完之前，页面都是一片空白。图 1 描述了页面加载过程中脚本和样式文件的下载过程。
 
 图1 JavaScript 文件的加载和执行阻塞其他文件的下载
-![JavaScript性能优化](./assets/web-javascript-性能01.jpg)
+![JavaScript性能优化](https://gfblog.cn/images/github/gfphp/web-javascript-性能01.jpg)
 
 我们可以发现一个有趣的现象：第一个 JavaScript 文件开始下载，与此同时阻塞了页面其他文件的下载。此外，从 script1.js 下载完成到 script2.js 开始下载前存在一个延时，这段时间正好是 script1.js 文件的执行过程。每个文件必须等到前一个文件下载并执行完成才会开始下载。在这些文件逐个下载过程中，用户看到的是一片空白的页面。
 
