--- a/docs/04.Web/10.JavaScript数据类型和数据结构.md
+++ b/docs/04.Web/10.JavaScript数据类型和数据结构.md
@@ -145,7 +145,7 @@ ECMAScript定义的对象中有两种属性：数据属性和访问器属性。
 
 #### TypedArray objects
 
-![TypedArray objects](./assets/web-javascript-TypedArray-objects.jpg)
+![TypedArray objects](https://gfblog.cn/images/github/gfphp/web-javascript-TypedArray-objects.jpg)
 
 ### 键控集: Maps, Sets, WeakMaps, WeakSets
 
