--- a/docs/04.Web/16.vue的双向绑定原理及实现.md
+++ b/docs/04.Web/16.vue的双向绑定原理及实现.md
@@ -4,9 +4,9 @@
 
 使用vue也好有一段时间了，虽然对其双向绑定原理也有了解个大概，但也没好好探究下其原理实现，所以这次特意花了几晚时间查阅资料和阅读相关源码，自己也实现一个简单版vue的双向绑定版本，先上个成果图来吸引各位：
 
-![vue双向绑定-图1](./assets/web-vue-bind-01.png)
+![vue双向绑定-图1](https://gfblog.cn/images/github/gfphp/web-vue-bind-01.png)
 
-![vue双向绑定-图2](./assets/web-vue-bind-02.gif)
+![vue双向绑定-图2](https://gfblog.cn/images/github/gfphp/web-vue-bind-02.gif)
 
 是不是看起来跟vue的使用方式差不多？接下来就来从原理到实现，从简到难一步一步来实现这个SelfVue。由于本文只是为了学习和分享，所以只是简单实现下原理，并没有考虑太多情况和设计，如果大家有什么建议，欢迎提出来。
 
@@ -39,7 +39,7 @@ var vm = new Vue({
 
 结果：
 
-![vue双向绑定-图3](./assets/web-vue-bind-03.png)
+![vue双向绑定-图3](https://gfblog.cn/images/github/gfphp/web-vue-bind-03.png)
 
 我们可以看到属性a有两个相对应的get和set方法，为什么会多出这两个方法呢？因为vue是通过Object.defineProperty()来实现数据劫持的。
 
@@ -80,7 +80,7 @@ console.log(Book);
 ```
 
 结果：
-![vue双向绑定-图4](./assets/web-vue-bind-04.png)
+![vue双向绑定-图4](https://gfblog.cn/images/github/gfphp/web-vue-bind-04.png)
 
 乍一看，是不是跟我们在上面打印vue数据长得有点类似，说明vue确实是通过这种方法来进行数据劫持的。接下来我们通过其原理来实现一个简单版的mvvm双向绑定代码。
 
@@ -88,13 +88,13 @@ console.log(Book);
 
 实现mvvm主要包含两个方面，数据变化更新视图，视图变化更新数据：
 
-![vue双向绑定-图5](./assets/web-vue-bind-05.jpg)
+![vue双向绑定-图5](https://gfblog.cn/images/github/gfphp/web-vue-bind-05.jpg)
 
 关键点在于data如何更新view，因为view更新data其实可以通过事件监听即可，比如input标签监听 'input' 事件就可以实现了。所以我们着重来分析下，当数据改变，如何更新视图的。
 
 数据更新视图的重点是如何知道数据变了，只要知道数据变了，那么接下去的事都好处理。如何知道数据变了，其实上文我们已经给出答案了，就是通过Object.defineProperty( )对属性设置一个set函数，当数据改变了就会来触发这个函数，所以我们只要将一些需要更新的方法放在这里面就可以实现data更新view了。
 
-![vue双向绑定-图6](./assets/web-vue-bind-06.jpg)
+![vue双向绑定-图6](https://gfblog.cn/images/github/gfphp/web-vue-bind-06.jpg)
 
 思路有了，接下去就是实现过程了。
 
@@ -110,7 +110,7 @@ console.log(Book);
 
 流程图如下：
 
-![vue双向绑定-图7](./assets/web-vue-bind-07.png)
+![vue双向绑定-图7](https://gfblog.cn/images/github/gfphp/web-vue-bind-07.png)
 
 ### 1.实现一个Observer
 
@@ -530,7 +530,7 @@ function SelfVue (options) {
 
 是不是看起来跟vue的使用方法一样，哈，真正的大功告成！想要代码，直接点击这里获取！现象还没描述？直接上图！！！请观赏
 
-![vue双向绑定-图2](./assets/web-vue-bind-02.gif)
+![vue双向绑定-图2](https://gfblog.cn/images/github/gfphp/web-vue-bind-02.gif)
 
 其实这个效果图，就是本文开头贴出来的效果图了，前文说着要带着大家实现，所以就在这里把图再贴一次了，这叫首尾呼应嘛。
 
