--- a/docs/04.Web/02.CSS选择器的分类.md
+++ b/docs/04.Web/02.CSS选择器的分类.md
@@ -12,7 +12,7 @@
 
 > 每个样式表由一系列规则组成
 
-![规则的结构](./assets/css-规则的结构.png)
+![规则的结构](https://gfblog.cn/images/github/gfphp/css-规则的结构.png)
 
 > 如规则左边所示，选择器定义了将影响文档中的哪些部分
 
@@ -153,7 +153,7 @@ img[title~="Figure"] {border: 1px solid gray;}
 
 ### 后代选择器
 
-![文档树结构](./assets/css-文档树结构.png)
+![文档树结构](https://gfblog.cn/images/github/gfphp/css-文档树结构.png)
 
 > 通过文档树结构，可以很形象的理解什么是后代选择器（descendant selector），也称为包含选择器/上下文选择器。定义后代选择器就是来创建一些规则，它们仅在某些结构中起作用，而在另外一些结构中不起作用
 
