--- a/docs/05.MySQL/01.MySQL连接的使用.md
+++ b/docs/05.MySQL/01.MySQL连接的使用.md
@@ -83,7 +83,7 @@ mysql> SELECT a.runoob_id, a.runoob_author, b.runoob_count FROM runoob_tbl a, tc
 4 rows in set (0.01 sec)
 ```
 
-![mysql-join-图1](./assets/mysql-join-01.gif)
+![mysql-join-图1](https://gfblog.cn/images/github/gfphp/mysql-join-01.gif)
 
 ## MySQL LEFT JOIN
 
@@ -111,7 +111,7 @@ mysql> SELECT a.runoob_id, a.runoob_author, b.runoob_count FROM runoob_tbl a LEF
 
 以上实例中使用了 LEFT JOIN，该语句会读取左边的数据表 runoob_tbl 的所有选取的字段数据，即便在右侧表 tcount_tbl中 没有对应的 runoob_author 字段值。
 
-![mysql-join-图2](./assets/mysql-join-02.gif)
+![mysql-join-图2](https://gfblog.cn/images/github/gfphp/mysql-join-02.gif)
 
 ## MySQL RIGHT JOIN
 
@@ -138,6 +138,6 @@ mysql> SELECT a.runoob_id, a.runoob_author, b.runoob_count FROM runoob_tbl a RIG
 以上实例中使用了 RIGHT JOIN，该语句会读取右边的数据表 tcount_tbl 的所有选取的字段数据，即便在左侧表 runoob_tbl 中没有对应的runoob_author 字段值。
 ```
 
-![mysql-join-图3](./assets/mysql-join-03.gif)
+![mysql-join-图3](https://gfblog.cn/images/github/gfphp/mysql-join-03.gif)
 
 **本文转载自 菜鸟教程，<a href="http://www.runoob.com/mysql/mysql-join.html" rel="nofollow">《MySQL 连接的使用》</a>**
